--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -99,11 +99,12 @@ com_Header As CanvasComponent:
                 LayoutMinHeight: =20
                 LayoutMinWidth: =280
                 OnCancel: =false
-                OnScan: |
+                OnScan: |-
                     =Set(
                         ScannedItem,
                         First(BarcodeReader2.Barcodes).Value
                     );
+                    /*
                     If(
                         App.ActiveScreen = scr_Entry,
                         Set(
@@ -115,6 +116,7 @@ com_Header As CanvasComponent:
                             2
                         )
                     );
+                    */
                 PaddingBottom: =0
                 PaddingLeft: =0
                 PaddingRight: =0
