--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -129,7 +129,7 @@
             Height: =75
             IsEntryScreen: =true
             LayoutMinHeight: =75
-            LayoutMinWidth: =200
+            LayoutMinWidth: =350
             Title: ="BADECO SLJEDIVOST I NAPREDNO SKLADIŠTE"
 
         vrt_EntryBody As groupContainer.verticalAutoLayoutContainer:
@@ -140,8 +140,8 @@
             LayoutDirection: =LayoutDirection.Vertical
             LayoutGap: =15
             LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
-            LayoutMinHeight: =100
-            LayoutMinWidth: =250
+            LayoutMinHeight: =200
+            LayoutMinWidth: =App.Width
             LayoutMode: =LayoutMode.Auto
             PaddingBottom: =10
             PaddingLeft: =10
@@ -163,7 +163,7 @@
                 LayoutGap: =10
                 LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                 LayoutMinHeight: =80
-                LayoutMinWidth: =250
+                LayoutMinWidth: =350
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =4
                 RadiusBottomRight: =4
@@ -539,8 +539,8 @@
             con_EntryData As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
-                LayoutMinHeight: =100
-                LayoutMinWidth: =100
+                LayoutMinHeight: =200
+                LayoutMinWidth: =350
                 RadiusBottomLeft: =4
                 RadiusBottomRight: =4
                 RadiusTopLeft: =4
@@ -618,10 +618,6 @@
                                 )
                             ).Value
                         );
-                        Set(
-                            isLoading,
-                            false
-                        );
                     TemplatePadding: =0
                     TemplateSize: =80
                     Visible: =!isLoading && !IsEmpty(filteredFiles)
@@ -634,8 +630,7 @@
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =Self.Size * 5
-                        OnSelect: |
-                            =Select(Parent);
+                        OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
@@ -654,8 +649,7 @@
                         DisabledColor: =RGBA(244, 244, 244, 1)
                         Height: =50
                         Icon: =Icon.ChevronRight
-                        OnSelect: |
-                            =Select(Parent);
+                        OnSelect: =Select(Parent)
                         PaddingBottom: =12
                         PaddingLeft: =12
                         PaddingRight: =12
