--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -355,12 +355,12 @@
 
             com_ProGalleries As com_Galleries:
                 EntryLabels: |-
-                    ={Line1: "Broj artikla", Line2: "Rok trajanja", Line3: "LOT", Line4: "Rezervisana količina:", Line5: "Potrebna količina:"}
+                    ={Line1: "Broj artikla:", Line2: "Rok trajanja:", Line3: "LOT", Line4: "Rezervisana količina:", Line5: "Potrebna količina:"}
                 FillPortions: =1
                 LayoutMinHeight: =200
                 LayoutMinWidth: =350
                 LineLabels: |-
-                    ={Line1: "Broj artikla:", Line2: "Naziv artikla:", Line3: "Količina", Line4: "Količina za slanje:"}
+                    ={Line1: "Broj artikla:", Line2: "Naziv artikla:", Line3: "Količina:", Line4: "Količina za slanje:"}
                 LineValuePosition: |-
                     ={Item_No: 0, Posting_Group: Blank(), Inv_Posting_Group: Blank(), Description: 1, Quantity: 2, Unit_Of_Measure: Blank(), 'Qty-to_Ship': 3}
                 LineValueVisibility: |-
