--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -99,12 +99,11 @@ com_Header As CanvasComponent:
                 LayoutMinHeight: =20
                 LayoutMinWidth: =280
                 OnCancel: =false
-                OnScan: |-
+                OnScan: |
                     =Set(
                         ScannedItem,
                         First(BarcodeReader2.Barcodes).Value
                     );
-                    /*
                     If(
                         App.ActiveScreen = scr_Entry,
                         Set(
@@ -116,7 +115,6 @@ com_Header As CanvasComponent:
                             2
                         )
                     );
-                    */
                 PaddingBottom: =0
                 PaddingLeft: =0
                 PaddingRight: =0
