--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -260,6 +260,7 @@
         ZIndex: =1
 
         com_NabHeader As com_Header:
+            LayoutMinHeight: =640
             LayoutMinWidth: =App.Width
             Title: ="NABAVNI NALOG"
 
