--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -14,7 +14,7 @@
                         xmlData: (ParseJSON(
                             GetXml.Run(
                                 SelectedFile,
-                                SelectedFolder
+                                SelectedQueue
                             ).response
                         ).Transfer_Header )
                     }
@@ -225,14 +225,14 @@
             false
         );
         If(
-            SelectedFolder = ReadyForProcessing,
+            SelectedQueue = ReadyForProcessing,
             ChangeXmlStatus.Run(
                 SelectedFile,
-                SelectedFolder,
+                SelectedQueue,
                 InProgress
             );
             Set(
-                SelectedFolder,
+                SelectedQueue,
                 InProgress
             )
         );
