--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -15,7 +15,7 @@
                         xmlData: (ParseJSON(
                             GetXml.Run(
                                 SelectedFile,
-                                SelectedFolder
+                                SelectedQueue
                             ).response
                         ).Sales_Header)
                     }
@@ -257,14 +257,14 @@
             false
         );
         If(
-            SelectedFolder = ReadyForProcessing,
+            SelectedQueue = ReadyForProcessing,
             ChangeXmlStatus.Run(
                 SelectedFile,
-                SelectedFolder,
+                SelectedQueue,
                 InProgress
             );
             Set(
-                SelectedFolder,
+                SelectedQueue,
                 InProgress
             )
         );
