--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -180,6 +180,7 @@ com_Modal As CanvasComponent:
                                 );*/
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
+                            TriggerOutput: ="FocusOut"
                             Type: ="Text"
                             Value: =LotNo
                             Visible: =true
@@ -279,6 +280,7 @@ com_Modal As CanvasComponent:
                             OnChange: =false
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
+                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             Type: ="Text"
                             ValidationState: =If(!IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0, "Error", "None")
                             Value: =Abs(com_Modal.QuantityCompleted)
@@ -398,6 +400,7 @@ com_Modal As CanvasComponent:
                             LayoutMinWidth: =320
                             OnChange: =false
                             Placeholder: ="Unesite potrebnu količinu"
+                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             ValidationState: =If(!IsNumeric(inp_potrebnoQty_2.Value) || Value(inp_potrebnoQty_2.Value) < 0, "Error", "None")
                             Value: =If(IsBlank(com_Modal.QuantityNewLOT),0,com_Modal.QuantityNewLOT)
                             Width: =200
