--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -16,7 +16,7 @@
                         xmlData: (ParseJSON(
                             GetXml.Run(
                                 SelectedFile,
-                                SelectedFolder
+                                SelectedQueue
                             ).response).Warehouse_Shipment_Header
                         )
                     }
@@ -452,7 +452,7 @@
         
         Set(isLoading, false);
         
-        If(SelectedFolder = ReadyForProcessing, ChangeXmlStatus.Run(SelectedFile, SelectedFolder, InProgress); Set(SelectedFolder, InProgress));
+        If(SelectedQueue = ReadyForProcessing, ChangeXmlStatus.Run(SelectedFile, SelectedQueue, InProgress); Set(SelectedQueue, InProgress));
         
         UpdateContext({wizardStep:1});
 
@@ -992,7 +992,6 @@
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
                                 BorderStyle: =""
-                                DelayOutput: =true
                                 DisplayMode: =DisplayMode.Edit
                                 Fill: =
                                 FontColor: =
@@ -1000,6 +999,7 @@
                                 Height: =31
                                 OnChange: |-
                                     =UpdateIf(OtpremniceLines.Selected.Res_Entry, Otpremnice_ResEntryGallery.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(OtpremniceResEntryQty.Value)});
+                                TriggerOutput: ="FocusOut"
                                 Value: =ThisItem.Quantity
                                 Width: =113
                                 X: =112
@@ -1035,7 +1035,6 @@
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
                                 BorderStyle: =""
-                                DelayOutput: =true
                                 DisplayMode: =DisplayMode.Edit
                                 Fill: =
                                 FontColor: =
@@ -1043,6 +1042,7 @@
                                 Height: =31
                                 OnChange: |-
                                     =UpdateIf(OtpremniceLines.Selected.Res_Entry, Otpremnice_ResEntryGallery.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(OtpremniceLot.Value)})
+                                TriggerOutput: ="FocusOut"
                                 Value: =ThisItem.LOT_No
                                 Width: =113
                                 X: =80
@@ -1185,7 +1185,7 @@
                             UpdateXML.Run(
                                 "{ Warehouse_Shipment_Header: {" & JSON(header) & "Warehouse_Shipment_Line: " & JSON(otpremnicaCollection) & "}",
                                 SelectedFile,
-                                SelectedFolder
+                                SelectedQueue
                             ),
                             Notify(
                                 "Došlo je do greške!",
@@ -1201,7 +1201,7 @@
                                 otpremniceReadyForNavCheckbox.Checked,
                                 ChangeXmlStatus.Run(
                                     SelectedFile,
-                                    SelectedFolder,
+                                    SelectedQueue,
                                     ReadyForNAVProcessing
                                 );
                                 Navigate(
@@ -1215,7 +1215,7 @@
                             )
                         ),
                         Set(
-                            SelectedFolder,
+                            SelectedQueue,
                             ReadyForProcessing
                         );
                         Notify(
@@ -1374,6 +1374,7 @@
                             LayoutMinWidth: =320
                             OnChange: =
                             Placeholder: ="Količina"
+                            TriggerOutput: ="FocusOut"
                             Value: =Otpremnice_ResEntryGallery.Selected.Quantity
                             Width: =150
                             X: =40
@@ -1482,6 +1483,7 @@
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
                             Placeholder: ="Unesite LOT"
+                            TriggerOutput: ="FocusOut"
                             Value: =Otpremnice_ResEntryGallery.Selected.LOT_No
                             Width: =150
                             X: =40
