--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -115,6 +115,7 @@ com_Footer As CanvasComponent:
                                 SelectedQueue,
                                 ReadyForNAVProcessing
                             );
+                            PrintDoc.Run(com_Footer.JSONData);
                             Navigate(
                                 scr_Entry,
                                 ScreenTransition.Fade
