--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -125,7 +125,7 @@ com_Footer As CanvasComponent:
                                 ChangeXmlStatus.Run(
                                     SelectedFile,
                                     SelectedQueue,
-                                    NAVChanges
+                                    ReadyForNAVProcessing
                                 );
                                 Navigate(
                                     scr_Entry,
