--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -355,7 +355,7 @@
 
             com_ProGalleries As com_Galleries:
                 EntryLabels: |-
-                    ={Line1: "Broj artikla:", Line2: "Rok trajanja:", Line3: "LOT", Line4: "Rezervisana količina:", Line5: "Potrebna količina:"}
+                    ={Line1: "Broj artikla:", Line2: "Rok trajanja:", Line3: "LOT:", Line4: "Rezervisana količina:", Line5: "Potrebna količina:"}
                 FillPortions: =1
                 LayoutMinHeight: =200
                 LayoutMinWidth: =350
