--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -537,7 +537,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -546,9 +546,9 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =com_Galleries.EntryLabels.Line5
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =135
+                        Width: =197
                         X: =Title3_2.X
-                        Y: =Body2_7.Y + Body2_7.Height + 5
+                        Y: =116
                         ZIndex: =1
 
                     Body2_7 As label:
@@ -556,7 +556,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -565,9 +565,9 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =com_Galleries.EntryLabels.Line4
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =135
+                        Width: =197
                         X: =Title3_2.X
-                        Y: =Body2_6.Y + Body2_6.Height + 5
+                        Y: =89
                         ZIndex: =5
 
                     Body2_6 As label:
@@ -575,7 +575,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -584,9 +584,9 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =com_Galleries.EntryLabels.Line3
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =135
+                        Width: =197
                         X: =Title3_2.X
-                        Y: =Subtitle2_2.Y + Subtitle2_2.Height + 5
+                        Y: =63
                         ZIndex: =6
 
                     Subtitle2_2 As label:
@@ -594,7 +594,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -603,7 +603,7 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =com_Galleries.EntryLabels.Line2
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =135
+                        Width: =197
                         X: =Title3_2.X
                         Y: =Title3_2.Y + Title3_2.Height + 5
                         ZIndex: =8
@@ -613,7 +613,7 @@ com_Galleries As CanvasComponent:
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =21
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
@@ -622,7 +622,7 @@ com_Galleries As CanvasComponent:
                         Size: =12
                         Text: =com_Galleries.EntryLabels.Line1
                         VerticalAlign: =VerticalAlign.Top
-                        Width: =135
+                        Width: =197
                         X: =16
                         Y: =10
                         ZIndex: =12
