--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -151,6 +151,7 @@ com_Modal As CanvasComponent:
                             Appearance: ='TextInputCanvas.Appearance'.Outline
                             BasePaletteColor: =
                             BorderStyle: =""
+                            DelayOutput: =false
                             DisplayMode: =DisplayMode.Edit
                             FontSize: =0
                             Height: =32
@@ -180,7 +181,6 @@ com_Modal As CanvasComponent:
                                 );*/
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
-                            TriggerOutput: ="FocusOut"
                             Type: ="Text"
                             Value: =LotNo
                             Visible: =true
@@ -272,6 +272,7 @@ com_Modal As CanvasComponent:
                             Appearance: ='TextInputCanvas.Appearance'.Outline
                             BasePaletteColor: =
                             BorderStyle: =""
+                            DelayOutput: =false
                             DisplayMode: =DisplayMode.Edit
                             FontSize: =0
                             Height: =32
@@ -280,7 +281,6 @@ com_Modal As CanvasComponent:
                             OnChange: =false
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
-                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             Type: ="Text"
                             ValidationState: =If(!IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0, "Error", "None")
                             Value: =Abs(com_Modal.QuantityCompleted)
@@ -393,6 +393,7 @@ com_Modal As CanvasComponent:
                             Appearance: ='TextInputCanvas.Appearance'.Outline
                             BasePaletteColor: =
                             BorderStyle: =""
+                            DelayOutput: =false
                             DisplayMode: =DisplayMode.Edit
                             FontSize: =0
                             Height: =32
@@ -400,7 +401,6 @@ com_Modal As CanvasComponent:
                             LayoutMinWidth: =320
                             OnChange: =false
                             Placeholder: ="Unesite potrebnu količinu"
-                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             ValidationState: =If(!IsNumeric(inp_potrebnoQty_2.Value) || Value(inp_potrebnoQty_2.Value) < 0, "Error", "None")
                             Value: =If(IsBlank(com_Modal.QuantityNewLOT),0,com_Modal.QuantityNewLOT)
                             Width: =200
